test/functional/Sema/invalid_char_lit.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

import io::printCharacter;

func main() -> Int {
    // CHECK: invalid_char_lit.glu:9:20: error: Character literal must be a single character
    printCharacter("abc");
    // CHECK: invalid_char_lit.glu:11:20: error: Character literal must be a single character
    printCharacter("");
    return 0;
}

// CHECK: 2 error(s)
